bug squash in game.js

--- a/FrontEnd/src/Views/App.css
+++ b/FrontEnd/src/Views/App.css
@@ -22,6 +22,13 @@ html {
   height: 100%;
 }
 
+.flex{
+  display: flex;
+}
+.profile{
+  display: flex;
+  justify-content: flex-start;
+}
 
                                                           /**
                                                           |--------------------------------------------------
